test/classes/forwarding/forwarding-cycle.good
forwarding-cycle.chpl:4: error: forwarding cycle detected
forwarding-cycle.chpl:6: note: for the type B
